# chromagraphnet

./: AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  environment.yml  pyproject.toml  requirements.txt
chromagraphnet/: __init__.py  cli.py
chromagraphnet/data/: __init__.py  graph_builder.py
chromagraphnet/inference/: __init__.py  predict.py
chromagraphnet/models/: __init__.py  chromafold_backbone.py  chromagraphnet.py  fusion.py  gat_module.py  modality_encoders.py  output_heads.py  physics_prior.py
configs/: default.yaml
docs/: architecture.md  data_format.md
notebooks/: 01_quickstart.ipynb
scripts/: prepare_for_github.sh  save_random_checkpoint.py
tests/: conftest.py  test_graph_builder.py  test_model.py  test_physics.py  test_smoke.py
