[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromagraphnet"
version = "0.1.1"
description = "Multi-modal graph-attention prediction of 3D genome architecture, built on the ChromaFold backbone."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Roy", email = "roy@uh.edu" },
    { name = "Juboraj Roy Pavel", email = "jroyp001@odu.edu" },
]
maintainers = [
    { name = "Roy", email = "roy@uh.edu" },
    { name = "Juboraj Roy Pavel", email = "jroyp001@odu.edu" },
]
keywords = [
    "3D genome",
    "Hi-C",
    "scATAC-seq",
    "graph neural network",
    "deep learning",
    "chromatin",
    "neuroscience",
    "ChromaFold",
    "GAT",
    "GATv2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "numpy>=1.21",
    "scipy>=1.7",
    "tqdm>=4.60",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
genomics = [
    "pybigwig>=0.3.18",
    "pyfaidx>=0.7",
    "cooler>=0.9",
    "pandas>=1.4",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = ["chromagraphnet[genomics,viz,dev,docs]"]

[project.urls]
Homepage = "https://github.com/USERNAME/chromagraphnet"
Repository = "https://github.com/USERNAME/chromagraphnet"
Documentation = "https://github.com/USERNAME/chromagraphnet/tree/main/docs"
"Bug Tracker" = "https://github.com/USERNAME/chromagraphnet/issues"
Changelog = "https://github.com/USERNAME/chromagraphnet/blob/main/CHANGELOG.md"

[project.scripts]
chromagraphnet-predict = "chromagraphnet.cli:predict_main"
chromagraphnet-info = "chromagraphnet.cli:info_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chromagraphnet*"]
exclude = ["tests*", "notebooks*", "docs*", "scripts*"]

[tool.setuptools.package-data]
chromagraphnet = ["configs/*.yaml", "configs/*.yml"]

# ---- linting / formatting ----

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]   # handled by formatter

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
